--- a/gb/ncid280_3.md
+++ b/gb/ncid280_3.md
@@ -10,7 +10,7 @@
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/2/n11696217.md#1" target="_blank">中共称艾滋患者95.8万 老年感染人数增</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/2/n11696217.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15dcad95557007a1_ttl7day2qK_VCG111179199203-150x120.jpg" align ="left"></a>12月1日是“世界艾滋病日”。据中共官方近日公布数据，中国大陆现存艾滋感染者95.8万人，老年男性艾滋病感染人数增加明显。有网民表示，在中共党政官员带头嫖妓下，不自重的人太多了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 6:57 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/2/n11695755.md#1" target="_blank">沈阳市住宅高楼大火 火势凶猛 伤亡不明</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/2/n11695755.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Unknown-150x120.jpg" align ="left"></a>12月2日晚21点30分左右，沈阳市浑南区的SR国际新城住宅区发生大火，火光冲天，目前伤亡不明。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 11:21 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/2/n11693966.md#1" target="_blank">重庆在建桥体突断开倾侧 无人员伤亡</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/2/n11693966.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/bkn-20191202031517432-1202_00952_001_01b-150x120.jpg" align ="left"></a>12月1日晚，重庆一在建大桥突然断开倾斜，所幸没有造成人员伤亡。事故原因和后续处置工作尚未公布。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 10:54 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/1/n11693420.md#1" target="_blank">广州主干道地陷深至38米 2车3人失踪</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/1/n11693420.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/6b1510bagy1g9gznq3c2xj20jk0g0tf2-150x120.jpg" align ="left"></a>广州大道北与禺东西路交界处发生地面塌陷，塌方地区最深38米，两辆车陷入看不到踪影。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 12:51 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/10/n11712523.md#1" target="_blank">安徽六安高速路接连发生车祸 共致6死10伤</a><br></h3>12月10日、7日，安徽六安段高速路均发生交通事故，共造成6人死亡，10人受伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 2:06 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/10/n11712260.md#1" target="_blank">阴霾天大陆多地航班延误 通行能力降50％</a><br></h3>12月10日，大陆多地部分机场因阴霾天气影响，能见度低，出现大面积延误情况，包括乌鲁木齐地窝堡机场、济南遥墙机场、青岛流亭机场、石家庄正定机场。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 1:15 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/9/n11710988.md#1" target="_blank">四川绵阳4.6级地震 成都德阳震感强烈</a><br></h3>四川省绵阳市安州区9日下午发生4.6级地震。地震发生后，大量网民发帖表示有震感，“成都震感强烈”、“西科大（绵阳西南科技大学）震感强烈”“德阳震感强烈”！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 8:54 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/8/n11708036.md#1" target="_blank">京津冀多地持续阴霾天 航班高速路均受影响</a><br></h3>12月8日，河北南部、北京东南部、河南中东部、山东西北部等地的部分地区因重度阴霾影响，多处高速路段封闭，机场航班也被取消。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 3:12 PM							</td></tr>
