--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -37,11 +37,12 @@
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11762556.md#1">曾去过武汉 香港女子疑染肺炎正接受隔离</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761238.md#1">穿越非洲抵美 山东维权人士万里大逃亡（下）</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11762314.md#1">大陆民众如何看台湾总统大选</a><br>
+<a href="https://github.com/ublry267/djy/blob/master/gb/19/12/17/n11728852.md#1">【思想领袖】专访邵岚：须反共捍卫价值观</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11762140.md#1">元旦黑龙江佳木斯机场起火 有巨大火球升腾</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759305.md#1">展望2020：美中贸易协议中的变数</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11762141.md#1">袁斌：中共恐惧的“规模性失业潮”正扑面而来</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11762023.md#1">港警强行终止元旦游行 辱骂狂踢路过青年</a><br>
-<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11762124.md#1">台直升机坠毁 参谋总长等8人已证实罹难</a><br>
+<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11762816.md#1">台资讯战专家：网红成中共渗透渠道</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11762029.md#1">新年北京昌平强拆 百余村民上访遭威胁</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11762532.md#1">传中共暂停“沪伦通”计划 疑因英国挺香港</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11762321.md#1">大陆2019年卖地金额创新高 16城市超千亿</a><br>
@@ -49,7 +50,6 @@
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11761870.md#1">程晓容：百万港人元旦游行 2020抗共主题延续</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760936.md#1">大陆民众新年感谢法轮功 问候李大师</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11761923.md#1">12月财新制造业PMI降至51.5 为3个月低位</a><br>
-<a href="https://github.com/ublry267/djy/blob/master/gb/19/12/17/n11728852.md#1">【思想领袖】专访邵岚：必须反共捍卫价值观</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11761505.md#1">【拍案惊奇】元旦百万游行被腰斩 港警用航拍机</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11761801.md#1">大陆17家上市公司控制人被抓 殃及百万投资者</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11751710.md#1">【2019盘点】六大案 透视美中医疗领域新战场</a><br>
@@ -93,7 +93,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/ublry267/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 349,116,854 人
+- 共 349,121,394 人
 ```
 </strong>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/11/19/n11666092.md#1">九评15周年 看大陆民众弃中共 句句真情</a><br>
