--- a/gb/news392_3.md
+++ b/gb/news392_3.md
@@ -17,9 +17,16 @@
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/27/n11748518.md#1" target="_blank">洪微：2020中国人最期待的预言</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/27/n11748518.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2005/12/512020308481671-150x120.jpg" align ="left"></a>预言，是对未来将发生的事情，所做出的预报或者断言，通常，是具有非凡预知超能力的人，通过神力或者非凡的能力，对未来即将出现事实的宣布。预言，也通常与所谓的现代科学规律相悖，或者不符合所谓的逻辑推断。所以，很多人不相信预言，即使真的应验，也被认为是巧合。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 3:36 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/27/n11748135.md#1" target="_blank">廖祖笙：党天下法治和德治皆为无本之木</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/27/n11748135.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/06/1506272237202039-150x120.jpg" align ="left"></a>习近平先生，你说“我们要坚持把依法治国和以德治国结合起来”，这说明你也意识到了法治和德治的重要性，说明庙堂之上也了然治下已是黑地昏天，国已不国。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 11:09 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/27/n11748133.md#1" target="_blank">陈思敏：向日本国会议员行贿的中企有何背景</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/27/n11748133.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/610091035481369-600x400-150x120.jpg" align ="left"></a>这几天日本媒体的头条新闻是现任国会议员“秋元司”在25日被捕，据报导，这是日本近10年来首次逮捕国会议员，秋元司是日本赌场政策的负责人，涉嫌收受中国博彩业者的贿赂。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 10:36 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/26/n11747307.md#1" target="_blank">周晓辉： 川习再次会面与英国预言家的预言</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/26/n11747307.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Fotolia_145654088_Subscription_L-600x400-1-150x120.jpg" align ="left"></a>12月24日耶诞节的前一天，美国总统川普（特朗普）在佛州海湖庄园通过视频向美军官兵祝贺节日后，有记者问他是否会与习近平举行仪式签署美中贸易协定。川普回应道：“是的，我们将会有签字仪式。”“最终我们会见面，而且会有一个更快的签字，因为我们希望完成它（协议）。协议已经达成了，现在正在翻译。”
-
-川普没有说明他将与习近平.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 5:53 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/29/n11752359.md#1" target="_blank">金浴凤：末日叹</a><br></h3>旷日贸易战，土共忒心烦
+梦里惊香港，醒来愁台湾
+支部牛毛多，专职吃闲饭
+五毛空呐喊，网军删挥汗
+外企加速逃，外汇日渐干
+滚滚三退潮，寂寂党机关
+权贵移民欢，干部撞钟懒
+猪瘟久肆虐，地震晃不断
+三日天上灿，九州地火燃
+红楼痴迷汉，独把黄昏看......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 12:58 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/29/n11752348.md#1" target="_blank">云鹤天：《忆秦娥?娄山关》新解</a><br></h3>狂风烈，
 腥风血雨香江夜。
 香江夜，
