--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11751864.md#1">内蒙古公安警官枪杀两副局长 当局封口</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11751676.md#1">曹兴诚批九二共识胡说八道 专家赞他有勇气</a><br>
 <br><p><a href="https://github.com/ublry267/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761363.md#1">【名家专栏】中共式审查制度正向世界扩散</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11762141.md#1">袁斌：中共恐惧的“规模性失业潮”正扑面而来</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11761548.md#1">可心：中共侵蚀联合国人权事务的四大手段</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761018.md#1">王友群：解体中共 万象更新</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760950.md#1">陈思敏：中共证监会带头违法 A股成中产掩埋场</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/26/n11747470.md#1">为中共效力的红色特工 后来怎么样了（2）</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760402.md#1">陆言：医生被杀案是中共治下恶果的冰山一角</a><br>
-<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759960.md#1">程晓容：惧《反渗透法》中共偷换焦点渲染恐怖</a><br>
 <br><p><a href="https://github.com/ublry267/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/23/n11739570.md#1">【2019盘点】时代变革 川普的九记重锤</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11743871.md#1">【独家】原大陆医生：我为何远离器官移植</a><br>
@@ -30,6 +30,7 @@
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/16/n11725027.md#1">【内幕】中共如何将全球港口和商船变武器</a><br>
 <br><p><a href="https://github.com/ublry267/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/ublry267/djy/blob/master/gb/19/12/5/n11701493.md#1">【思想领袖】中共内部承认正走向解体（一）</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11763908.md#1">泼墨女董瑶琼获释出院 神情紧张痴呆</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11763808.md#1">江苏男子因强拆上访坐牢3年 出狱杀拆迁者</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11763905.md#1">遭拘15日 中国劳工维权者陈伟祥等3人获释</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11762932.md#1">元旦大游行 3人权观察员首次遭港警逮捕</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11762740.md#1">扬州大学多名学生感染肺结核 校方压制消息</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11761830.md#1">【翻墙必看】专家：习面临无解难题 应改弦易辙</a><br>
-<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761363.md#1">【名家专栏】中共式审查制度正向世界扩散</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11763896.md#1">“一人炼功全家受益”澳洲法轮功学员谢师恩</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11763828.md#1">武汉爆发似SARS“不明肺炎”民众如何防范？</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11763597.md#1">国际品牌Zara武汉店无预兆全关 被贴封条</a><br>
