--- a/gb/ncid282_9.md
+++ b/gb/ncid282_9.md
@@ -1,4 +1,8 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ublry267/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ublry267/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ublry267/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ublry267/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ublry267/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ublry267/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ublry267/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ublry267/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://hua.vcfkoo.ga/hua/7" rel="nofollow">大纪元</a> | <a href="http://hua.vcfkoo.ga/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://hua.vcfkoo.ga/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://hua.vcfkoo.ga/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://hua.vcfkoo.ga/hua/11" rel="nofollow">看中国</a> | <a href="http://hua.vcfkoo.ga/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://hua.vcfkoo.ga/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://hua.vcfkoo.ga/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>社会万象</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/ublry267/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ublry267/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/22/n11675079.md#1" target="_blank">胡歌谈粉丝：不能接受花钱多就优秀的观念</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/22/n11675079.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/1903270615401487-150x120.jpg" align ="left"></a>日前，大陆男星胡歌因今年曾入围戛纳电影节主竞赛单元的唯一华语片《南方车站的聚会》（以下简称《南方》）接受采访。对于主演电视剧十多年之后才真正主演首部电影，胡歌坦言，尽管自己非常担心不如之前演电视剧的表现，但还是决定要尝试一下，“哪怕输了也值得”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 3:49 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/23/n11675404.md#1" target="_blank">举牌声援香港屡遭攻击 祝圣武：终结中共</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/23/n11675404.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/10FotoJet-1-150x120.jpg" align ="left"></a>香港的反送中运动影响世界，深入人心。温哥华大陆律师祝圣武一个多月来，一直在当地商业中心举牌支持香港，多次遭特务骚扰。近日，他向大纪元记者记述了自己站出来抗议中共的心得。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 1:39 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/22/n11674519.md#1" target="_blank">中国出生人口两年断崖式下跌 经济续衰退</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/22/n11674519.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/01/4f1eb50ab827ca4fc63c97322f4e7ec5-150x120.jpg" align ="left"></a>中共结束一胎化政策后，年轻人却在沉重经济压力下不愿多生小孩，出生率反下跌，官方2018年的出生率是历史新低。有民间机构估算，2019年出生人口将再创1949年来最低。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 1:38 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/22/n11674012.md#1" target="_blank">昆大学生诉中领事徐杰案开庭 法庭发传票</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/22/n11674012.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/2019-11-22-17009-Drew-participating-in-Hong-Kong-Students-Protests-150x120.jpg" align ="left"></a>澳洲昆州大学学生帕夫洛（Drew Pavlou）起诉中共驻布里斯本总领事徐杰一案11月22日（周五）上午在昆州地方法院开庭。徐杰本人未出庭，亦未指派法律代表到场，法庭向被告及相关机构发出传票。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月22日 11:04 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/20/n11668740.md#1" target="_blank">在京截访人员私闯民宅被砍成重伤（慎入）</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/20/n11668740.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/page-4-150x120.jpg" align ="left"></a>10月13日早上，北京市丰台区王佐镇河西村一处出租房内，突然闯入十余名截访人员，将访民陈宏伟抓住，陈受到惊吓时胡乱操起身边的一把刀，将一截访男子砍伤，血肉模糊。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 2:13 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/19/n11667295.md#1" target="_blank">遭两官员强奸 湖南12岁女孩反遭调查</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/19/n11667295.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/002FotoJet-1-150x120.jpg" align ="left"></a>近日，一封《一个父亲的血泪控诉》在网路流传，信中称，其女儿周某某系湖南衡阳祁东县洪桥镇一中的在校学生，今年未满12周，遭当地权贵强奸。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 7:38 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/19/n11666031.md#1" target="_blank">中共雇凶烧大纪元印刷厂 胡元辉谴责</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/19/n11666031.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Screenshot_2019-11-19_at_35534_PM@1200x1200-600x400-1-150x120.png" align ="left"></a>11月19日凌晨3点50分，香港大纪元时报印刷厂遭中共雇凶纵火。对此，国立中正大学传播学系教授胡元辉表示，此作法令人不解，是令人痛恨的事情，特别是作为一个非营利组织的媒体，却遭到攻击，是非常大的社会耻辱。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 10:55 PM							</td></tr>
@@ -12,10 +16,15 @@
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/18/n11663869.md#1" target="_blank">韩国瑜质疑台独 赖清德：其实你不懂我们的心</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/18/n11663869.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/412967-150x120.jpg" align ="left"></a>高雄市长韩国瑜今（18）日质疑赖清德的台独立场，赖清德回应“其实你不懂我们的心”今天晚间并在脸书回应，台湾已经是个主权独立的国家，名字叫中华民国，与中国互不隶属，执政后不必另外宣布台湾独立。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 11:13 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/17/n11661439.md#1" target="_blank">坐飞机偶遇汤唯 网友晒照引发热议</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/17/n11661439.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/07/1-362-150x120.jpg" align ="left"></a>16日，有网友在微博晒出机场偶遇汤唯的照片。照片中，乘坐经济舱的汤唯，在登机前与普通乘客一样，除了站在那里排队安检，还独自一人提行李，可能因为行李太多太重，以至于汗水都沁透了衣服，网友不禁大赞她“活得非常真实”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 11:24 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/17/n11661453.md#1" target="_blank">中国最大掩埋场提前25年填满 焚垃圾毁生态</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/17/n11661453.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/VCG11496599839-150x120.jpg" align ="left"></a>陕西省西安市的全国最大垃圾掩埋场原设计要撑到2044年，但由于每天1万吨垃圾的涌入，已提前25年被塞满。现大举兴建焚化炉， 但垃圾焚烧会断送中国生态的未来。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 2:34 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/15/n11659394.md#1" target="_blank">【名家专栏】导弹防御是美安全新基石（上）</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/15/n11659394.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/000_1261QN-150x120.jpg" align ="left"></a>本文将探讨两个非常重要的问题。首先，能否在削减核武器的同时部署导弹防御系统？ 其次，有限的导弹防御系统能否可靠地抵御核导弹威胁？ 我对这两个问题的回答都是“能！”但同时，也有一个很重要的警告：如果俄罗斯和中共都把有限导弹打击威胁作为自己的战略，那么美国的导弹防御系统需要继续得到改进，就能够可靠地抵御这种威胁。此外，其它的很主要的威胁也依然存在，为此，美国方面.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月17日 8:19 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/16/n11659677.md#1" target="_blank">神韵2020全球巡回演出 首场纽约州12/20拉开帷幕</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/16/n11659677.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/7c1262cfc3111d09241f51c5cd6944ac-150x120.jpg" align ="left"></a>神韵2020全球巡演的首场演出，将在今年12月20日在纽约州帕切斯市（Purchase）和加州伯克利（Berkeley）同时拉开帷幕。随后，将有同等规模大小的七个艺术团与艺术团乐团在全球同步演出。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月17日 12:30 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/15/n11658692.md#1" target="_blank">大陆医美行业乱象丛生 致残致死案例频发</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/15/n11658692.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/15d762ef57d33dfb_ttl7dayLJO_VCG111220651613-150x120.jpg" align ="left"></a>近年来中国医疗美容行业爆发式增长，同时乱象丛生，近年来，医美行业相关投诉却增加了10倍多，因医美致残、致死案例不断发生。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月16日 1:25 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/15/n11658707.md#1" target="_blank">新通话记录显示 川普未跟乌克兰总统提条件</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/15/n11658707.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1182539797-150x120.jpg" align ="left"></a>白宫周五（11月15日）公布了另一份备忘录，内容是4月21日美国总统川普（特朗普）与刚刚胜选的乌克兰总统候选人沃洛迪米尔·泽伦斯基（Volodimyr Zelenskiy）之间的通话。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月16日 1:15 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/25/n11678963.md#1" target="_blank">6厘米钻头打穿新房楼板 开封女屋主被吓呆</a><br></h3>装修新房本是高兴的事，可河南开封市尉氏县居民郑女士在装地板时却被自己的新房吓了一跳。近日，她反映，交房时她发现其中一卧室楼板中间部分凹陷，且房间地面有多处明显裂痕；在铺装木地板打地板龙骨时，楼板竟被6厘米的钻头打穿。开发商对此声称，这并不影响居住，若要退房，郑女士须还清按揭。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 3:00 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/25/n11678880.md#1" target="_blank">南昌初一学生校服收费2300元 家长难接受</a><br></h3>近日，江西南昌县的舒先生反映，孩子在该县豫章师院附属学校读初一，学校要求家长交钱统一买校服，费用实在太高，令家长难以接受。据了解，该校订购的校服共13件，费用总计2300元。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 2:25 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/25/n11678229.md#1" target="_blank">每日三退声明精选（2019/11/24）</a><br></h3>我几乎天天看大纪元、新唐人，使我更加看清了共产党的邪恶本质，并在力所能及条件下，揭露中共，弘扬自由、民主、法治的普世价值观，为中国民族的觉醒和未来，奋笔疾书，尽量感染身边的每一个人，家人、亲戚、朋友、同学，特别是今年以来的中美贸易战和香港民众反送中运动，为中国的未来，尽自己一份绵薄之力。在此，我庄严声明，退出中国共产党党籍，永不反悔。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 10:14 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/24/n11676572.md#1" target="_blank">每日三退声明精选（2019/11/23）</a><br></h3>打土豪分田地，害死那么多地主，是地主错了么？
+资本主义工商业改造，害死那么多资本家，是资本家错了么？
+反右斗争，害死那么多爱国人士，是爱国人士错了么？
+把归国华侨当特务，害死那么多，是爱国华侨错了么？
+三年大饥荒，饿死一亿多农民“官方统计是掩盖罪恶的数字”，仅重灾区的河南，安徽两省就饿死七千多万人，四川省饿死一千多万人。。。。。。是勤劳善良的农民错了.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月24日 11:12 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/23/n11675439.md#1" target="_blank">每日三退声明精选（2019/11/22）</a><br></h3>不再被共党邪灵蒙蔽，共产党满口“伟光正、假大空”，所作所为却都是欺骗与迫害老百姓为害人类，天灭中共，没有共产党才有民主中国！才有每一个家庭的安全与幸福！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 10:45 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/22/n11673018.md#1" target="_blank">每日三退声明精选（2019/11/21）</a><br></h3>十年前我第一次开始了解中共统治真相后一直忍气吞声默默忍受着，但现在看到中共在新疆、在香港以及对宗教律师团体的残酷迫害，我无法允许自己在沉默下去，在此我声明退出参加加入的中共少先队。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月22日 11:33 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/21/n11670314.md#1" target="_blank">每日三退声明精选（2019/11/20）</a><br></h3>自共匪邪教建政一来一直被共匪思想洗脑，到现在才彻底看清红色暴政，看到大陆?层受尽压迫和财产剥夺，香港民主运动无人性的暴力血腥震压心里说不出什么滋味，一个卖国的邪党还天天叫人民爱党爱国变态至极，自己思想卖国引进马列思想，行为卖国送掉中国无数国土还残杀无数中国人民，真是人间魔鬼，早晚会下地狱，为了远离邪恶，我申请退出小时候不知加入的少先队。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 10:44 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/20/n11667707.md#1" target="_blank">每日三退声明精选（2019/11/19）</a><br></h3>中共暴行甲天下，戾暴恶行人人骂。
@@ -31,10 +40,5 @@
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/18/n11662461.md#1" target="_blank">每日三退声明精选（2019/11/17）</a><br></h3>力挺香港同胞，大陆人民不全部都是唯利是图的人，很多很多都是有良知的，很多人民都是支持香港同胞争取自由民主的，关于国内媒体的新闻跟下面的评论，都是官方水军的，媒体新闻跟评论根本就不让发表任何反对声音，我们只有在心里默默支持，请外界同胞不要相信大陆的媒体宣传跟评论，大陆千千万万人跟你们站在一起，只是发表不出来，我们爱这个国家，爱这个民族，只是不爱这个邪党。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 11:53 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/17/n11661177.md#1" target="_blank">每日三退声明精选（2019/11/16）</a><br></h3>曾留学多年返回国内，有比较才知道透明的西方是充满人性的社会，而国内一切都是暗黑，在一党独裁专制下遍地腐败，道德全面堕落，根源就是这个党。现有身边明白人指点翻墙，特此声明，退出被拉入的所谓共青团和曾加入的所谓少先队。做中华儿女，不做马列子孙。天佑平安。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月17日 9:30 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/17/n11660831.md#1" target="_blank">前男友用不雅照威胁 福州女大学生遭吞药自杀</a><br></h3>“我马上把你的不雅照放学校论坛！”“明天我就去调查你爸妈，给叔叔阿姨惊喜！”10月17日，在福建福州外语外贸学院读大四的小静（化名 ）收到前男友发来的威胁信息。28日，小静吞下200颗药片自杀，被发现时她全身抽搐、口吐白沫。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月17日 2:36 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/17/n11660778.md#1" target="_blank">广东智障女孩遭多次性侵 8个月内二次怀孕</a><br></h3>广东茂名信宜市，存在智力障碍问题的12岁女孩小文（化名）被曝多次遭性侵，8个月内怀孕两次，并两次进行流产手术。11月16日，小文的家属表示，小文在今年3月就曾遭性侵怀孕，不料10月份再遭性侵。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月17日 1:36 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/17/n11660719.md#1" target="_blank">男子价值过万包裹丢失 快递公司只赔1500</a><br></h3>快递寄出近一个多月后，浙江的陈先生才接到快递公司工作人员的来电，他被告知他寄出的包裹确认丢失。近日，陈先生表示，包裹是为客户订做的机械齿轮，价值1.3万元，由于寄出时未保价，快递公司表示只愿意赔偿1500元，这令他难以接受。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月17日 12:27 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/16/n11659882.md#1" target="_blank">重庆饲养员私自带幼女近距离摸熊猫受处理</a><br></h3>日前，重庆市动物园一名饲养人员未经许可，私自私自带人进入工作区域近距离观看大熊猫幼仔。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月16日 4:38 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/16/n11659775.md#1" target="_blank">川男7000元做结扎手术 4个月后妻怀孕</a><br></h3>四川崇州市一男子在蜀都医院花费7000多元做男性结扎手术，结果其妻子4个月后怀孕，做手术的医院被投诉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月16日 2:47 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/15/n11657048.md#1" target="_blank">每日三退声明精选（2019/11/14）</a><br></h3>在全球关注香港人民捍卫民主自由运动的时刻，我们越来越看清了中共的邪恶。回想到八九六四及镇压法轮功，中共使用的一切镇压手段如出一辙。一个政府，一个政权靠谎言、欺骗等流氓手段镇压正义与良知，这在历史上是绝无仅有的...... 。我们不与邪恶为伍，退出年少时期加入的少先队组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 10:16 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/ncid282_8.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/ncid282.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/ncid282_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/ncid282_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/ncid282_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/ncid282_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/ncid282_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/ncid282_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/ncid282_8.md#1">8</a>&nbsp;&nbsp;9&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/ncid282_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/ncid282_10.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ublry267/djy/blob/master/gb/ncid282_9.md#1<br><a href="https://github.com/ublry267/djy/blob/master/gb/ncid282_9.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ublry267/djy/blob/master/gb/ncid282_9.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid282_9.htm">http://www.epochtimes.com/gb/ncid282_9.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
