--- a/gb/nf5773_2.md
+++ b/gb/nf5773_2.md
@@ -20,7 +20,7 @@
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/6/n11705893.md#1" target="_blank">犯涉黑等五罪 内蒙电视台前台长获刑18年</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/6/n11705893.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/zhao-chuntai1-150x120.jpg" align ="left"></a>中共内蒙古广播电视台前党委书记、台长赵春涛近日一审以受贿、巨额财产不能说明来源、包庇纵容黑社会组织、单位受贿、故意伤害等五罪被判有期徒刑18年。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 12:47 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/6/n11704694.md#1" target="_blank">贵安新区公安局前局长被双开 长期包养情妇</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/6/n11704694.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/3ca321b108d2cb590fa1c5bcdf96ffa2-150x120.jpg" align ="left"></a>12月3日，中共贵州省纪监委通报，贵安新区管委会前党组成员，贵安新区公安局前党委书记、局长高永昌被双开。通报指高永昌不仅受贿数额特别大，而且还与多女搞权色交易，长期养情妇。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 2:05 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/5/n11703843.md#1" target="_blank">《半夜鸡叫》作者去世 中共斗地主杜撰周扒皮</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/5/n11703843.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/6e72e157-8605-449b-b75d-2e5c3d672cff-800x533-150x120.jpg" align ="left"></a>近日，曾经创作出家喻户晓的地主形象“周扒皮”的作者高玉宝因病去世，引发舆论关注。尽管人们现在逐渐认识到中共教科书上描述的“周扒皮”事迹是虚构的，但地主剥削雇农的负面形象早已深入人心。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 8:16 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/5/n11703283.md#1" target="_blank">呼和浩特中院前院长受审 被控受贿逾两千万</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/5/n11703283.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/dongbinghui-Web-Banner-1200x800-v3-150x120.jpg" align ="left"></a>中共内蒙古呼和浩特市中级法院前党组书记、院长董秉惠（副厅级）日前出庭受审，其被指控2200余万元，贪污160万元。此前，董秉惠曾被指知法犯法，以案谋私等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 11:56 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/17/n11727200.md#1" target="_blank">广西禁毒大队前大队长养两情妇及私生子</a><br></h3>广西靖西市公安局禁毒大队原大队长黄毅有两名情妇且婚外生子；并每月向吸毒人员收取“保护费”，充当贩毒人员“保护伞”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 2:31 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/14/n11722439.md#1" target="_blank">云南高院原院长被处分 曾涉孙小果案</a><br></h3>日前，云南高级法院原党组书记、院长赵仕杰被留党察看一年处分，按二级巡视员确定其退休待遇。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 2:48 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/12/n11718649.md#1" target="_blank">陕西省纪委“厅级内鬼”胡传祥被判9年</a><br></h3>12月10日，中共陕西省纪委、省预防腐败局预防腐败室前主任胡传祥，因行贿、受贿罪而被判处9年，并处罚金320万元（人民币）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 11:39 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/12/n11717304.md#1" target="_blank">内蒙古鄂尔多斯公安局高官刘杰落马</a><br></h3>中共内蒙古公安系统被深度清洗。12月12日，内蒙古鄂尔多斯市公安局副局长刘杰涉嫌“严重违纪违法”，目前正在接受调查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 1:14 PM							</td></tr>
