--- a/gb/ncid282_3.md
+++ b/gb/ncid282_3.md
@@ -20,7 +20,7 @@
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/19/n11733150.md#1" target="_blank">组图：12.19吁国际介入港人道危机游行</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/19/n11733150.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/191219064942100615-150x120.jpg" align ="left"></a>香港社福界一连三日发起罢工及集会。星期四（19日）最后一天发起“香港人权及民主法案”游行，时间从下午2时起至傍晚5时，路线由湾仔游行至9个国家驻港领事馆，包括澳洲、捷克、意大利、荷兰、英国、欧盟、美国、日本及加拿大，呼吁有关国家通过类似《香港人权与民主法案》的议案。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 2:40 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/20/n11735446.md#1" target="_blank">副总统政见发表会 赖清德：助中国民主化</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/20/n11735446.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/f00d04241153ca652cca18deff1fe6ce-150x120.jpg" align ="left"></a>2020副总统电视政见发表会20日登场，国民党候选人张善政表示，他跟国民党总统候选人韩国瑜提出“十大数位行动计划”，跟过去十大建设前后呼应，包括成立直属行政院的数位创新委员会，布建普及先进的数位基础政策，全面推广数位教育，并结合社会科技，发展数位文化，及发展智慧城乡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 11:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/20/n11735084.md#1" target="_blank">衢州定婚丧礼金不得超300元 网民：管太宽</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/20/n11735084.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/01/shutterstock_399512464-e1517330465968-150x120.jpg" align ="left"></a>近日，中共浙江省衢州市政府制定《衢州市婚丧喜庆事宜操办标准》，要求结婚彩礼总数要控制在10万元以内，婚事礼金在300元以内，丧事200元以内。对此，网民纷纷表示管得太宽。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 6:23 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/19/n11733249.md#1" target="_blank">克鲁兹：弹劾案已崩溃 民主党阵脚大乱</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/19/n11733249.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1KI7GJ-150x120.jpg" align ="left"></a>在众议院投票通过指控川普（特朗普）总统“滥用权力”和“阻碍国会”弹劾条款的翌日，德克萨斯州共和党参议员特德·克鲁兹（Ted Cruz）向媒体表示，民主党人目前感到很焦虑，因为他们发起的弹劾案已经崩溃。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 2:36 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11744025.md#1" target="_blank">每日三退声明精选（2019/12/23）</a><br></h3>我从国内大量反人性的现实中认识到，无神论罪大恶极，中共才是最大的邪教，我声明自愿退出曾经入过的少先队，与之彻底决裂，争取光明的未来！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 11:28 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/22/n11738955.md#1" target="_blank">前华为工程师失去加国枫叶卡 面临遣返</a><br></h3>前中国电信巨头华为工程师张国东（Guodong Zhang，音译）从大陆移民加拿大后，因长期居住海外丢掉永久居民身份，面临被遣返回中国。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 8:42 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/22/n11738135.md#1" target="_blank">久坐玩手机每天吃汉堡 扬州男童患重度脂肪肝</a><br></h3>近日，江苏扬州9岁男童优优（化名）因肺炎就医。医生注意到，优优的体重竟有120斤，一检查，发现他还患上了重度脂肪肝。原来，优优爱玩手机，经常久坐不动，还每天吃汉堡喝饮料。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 2:20 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/22/n11738059.md#1" target="_blank">沪男子图好玩点燃杨絮 烧毁3770万财产</a><br></h3>今年5月，上海青浦39岁男子汪某出于好玩，用打火机点燃一堆白杨絮。白杨絮起火后引燃一旁的塑料废品等可燃物，火势蔓延到邻近的一家公司内，使该公司冷库着火烧毁。此次事故造成直接经济损失超3770万元人民币。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 1:24 PM							</td></tr>
