--- a/gb/news2007_4.md
+++ b/gb/news2007_4.md
@@ -23,7 +23,7 @@
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/19/n11733023.md#1" target="_blank">占星解析香港独立是反送中运动的最终结果</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/19/n11733023.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912111840131538-150x120.jpg" align ="left"></a>从2019年6月开始爆发的香港反送中运动是今年最大的新闻，也是空前而绝后的新闻，是世界民主和人权运动史上光辉的一页。运动至今仍在继续着，很多可歌可泣的青年人的表现和大部分港人不屈不挠、和平、理性、互助且又毫不畏惧强权的精神令人赞叹不已。香港的荣光是在提醒着全世界三十年前那场惨绝人寰的大屠杀的刽子手依然是杀人者和欺骗者.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 2:47 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/9/11/19/n2727242.md#1" target="_blank">传奇“三元宰相”——正义敢言的商辂</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/9/11/19/n2727242.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/03/170324021553100649-150x120.jpg" align ="left"></a>商辂，字弘载，浙江淳安人，明代著名史学家、思想家，历任英宗、代宗、宪宗三朝大臣，官至吏部尚书、文渊阁大学士。他以浙江乡试第一（解元）、礼部会试第一（会元）、殿试第一（状元）“连中三元”，不仅才学出众，更以为官清廉、刚直敢言载入《明史》，在复杂动荡的时局中，他敢于为民请命，有“三元宰相”、“一代贤相”之称。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 1:35 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/13/n11721189.md#1" target="_blank">天上人间冬至日  传统节俗暖人心</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/13/n11721189.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/0fa636c39f55a3705ac0609e890318ab-150x120.jpg" align ="left"></a>冬至到，一阳生，准备迎春！中华文化中为何说冬至大如年？冬至又何又称“初岁”？天上冬至日有什么特征？人间冬至节有哪些表现？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 5:40 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/13/n11721380.md#1" target="_blank">逆天而为痛悔迟71：1966──金顺守女逆守牛，江青文革妖言骤（上）</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/13/n11721380.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/71-1-150x120.jpg" align ="left"></a>上一章，我们讲述了1962～1963年土星顺逆两守女的天象下，中华女主王光美从风光无限的母仪天下，到引领中共四清运动的奇特历程。也展示了1964底～1965年初，在水守斗尾、水金缠斗的天象下，毛泽东终于以死缠烂打的方式，斗败了刘少奇，应了中华易主的天象，毛再度成为中华的实权天子，那么天象对应的女主，也自然从王光美，改成.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 8:52 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/24/n11742891.md#1" target="_blank">唐浩：末战</a><br></h3>正邪决战末戏演   香江烽火漫连天   善扬德胜败恶堕   传奇永铭凌霄巅......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 11:25 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/24/n11742996.md#1" target="_blank">台湾古典诗：山中湖映富士山</a><br></h3> 微风淡荡趁悠闲，隐约纱笼富士山； 烟水苍茫横白鹭，金波潋滟绚斑斓。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 10:33 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/23/n11739882.md#1" target="_blank">唐浩：劝警</a><br></h3>毋为阶下奴
   勿沦手中魂
