--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/ublry267/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ublry267/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ublry267/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ublry267/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ublry267/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ublry267/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ublry267/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ublry267/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="http://hua.vcfkoo.ga/hua/7" rel="nofollow">大纪元</a> | <a href="http://hua.vcfkoo.ga/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://hua.vcfkoo.ga/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://hua.vcfkoo.ga/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://hua.vcfkoo.ga/hua/11" rel="nofollow">看中国</a> | <a href="http://hua.vcfkoo.ga/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://hua.vcfkoo.ga/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://hua.vcfkoo.ga/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/ublry267/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ublry267/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ublry267/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ublry267/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ublry267/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ublry267/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ublry267/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ublry267/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr>
 <tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11763875.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2018/10/61863940672c9b71df90908124e7ada7-320x200.jpg">【新闻看点】川普称1/15签约 北京为何沉默</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11750678.md#1">夏小强：台总统候选人政见会结束 大势已定</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11756102.md#1">中共外交辞令出尽丑 “耿爽模拟器”被下架</a><br>
@@ -9,6 +9,7 @@
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/29/n11752699.md#1">北京女医生遇害细节曝光 遭“拉锯式”割颈</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11751864.md#1">内蒙古公安警官枪杀两副局长 当局封口</a><br>
 <br><p><a href="https://github.com/ublry267/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/3/n11764864.md#1">【名家专栏】川普减企业税为何令左派烦恼</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/3/n11764938.md#1">新州：从违反程序看中共破坏司法公正</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/3/n11764613.md#1">袁斌：“小康年”将到，访民为何吊死在信访局</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11764288.md#1">东方觉：犯罪集团之恶与“保护伞”之黑</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/22/n11738731.md#1">自平：有感于香港之事 国殇三笺</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11761615.md#1">夏林：以天灭中共为主线的2019年大事</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761178.md#1">海风：新年新定义</a><br>
-<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761161.md#1">周晓辉：上波罗的海两国黑名单 中南海再受挫</a><br>
 <br><p><a href="https://github.com/ublry267/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/23/n11739570.md#1">【2019盘点】时代变革 川普的九记重锤</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11743871.md#1">【独家】原大陆医生：我为何远离器官移植</a><br>
