--- a/gb/nsc1002_3.md
+++ b/gb/nsc1002_3.md
@@ -20,6 +20,6 @@
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/12/n11718409.md#1" target="_blank">喝对茶才养生 绿茶等6大类 哪种最适合你？</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/12/n11718409.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/tea_532470610-150x120.jpg" align ="left"></a>红茶、绿茶、普洱茶、东方美人??市面上茶类种类各异。初入门者，可从6大茶类开始了解。6大茶类以“发酵程度”分类。5方法，选择适合自己的茶：有些人喝茶出现睡不着、心悸等，也许是喝到不适合的茶，先了解自己的体质相当重要。1. 寒性、燥性体质，适合饮不同的茶。茶叶本身属凉性，经过发酵与炭焙可变为偏暖或暖性。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 1:23 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/10/n11713068.md#1" target="_blank">《睡眠救赎》搬到乡下依旧半夜惊醒</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/10/n11713068.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/shutterstock_586485614-150x120.jpg" align ="left"></a>她退休后选择搬到乡下宁静的社区居住，乡下的环境和城市比起来，真的安静许多。但到了深夜，只要是有任何风吹草动或虫鸣鸟叫的声音， 她都会被这些声音所吵醒，虽然还都能入梦， 但是几年下来，身体很明显比过去住在城市里还差。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 4:56 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/10/n11714404.md#1" target="_blank">单脚站立：1招防骨松增肌力 有3大好处</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/10/n11714404.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/stand-with-one-leg-1-1211-150x120.jpg" align ="left"></a>进入更年期的妇女以及65岁以上的老人，通过适度且简单的负重运动，例如单脚站立，能减缓骨质流失的速度，还能增加肌力和体能、保护关节，并保持良好的平衡感，避免摔倒而骨折。单脚站立对健康有着很多好处。单脚站立随时随地可进行，有两种做法。方法一：单脚抬高离地约5公分，站立1分钟，双脚各练习6次。膝盖痛能做单脚站立吗？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 2:29 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/19/n11732455.md#1" target="_blank">快餐不利健康 鹿特丹拟限制店家数量</a><br></h3>为了对抗肥胖，减少肥胖人口比例，帮助当地居民改善健康状况，荷兰鹿特丹市政府拟对本市快餐店的数量进行限制，重点限制范围是城市中心区域。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 4:39 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/12/n11717402.md#1" target="_blank">如何预防肝癌？ 从定期健检和饮食习惯下手</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/12/n11717402.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/7cf157c301561d11526829ce476ae2c9-150x120.jpg" align ="left"></a>为让民众了解导致肝脏不健康的因素，纽约长老会下城医院的“福安康宁”华人社区保健计划10日在纽约中华公所举办“预防乙型肝炎、丙型肝炎和肝癌”健康硏讨会，注册护士汪敏玲为华埠耆老们解说预防肝炎的健康知识。亨特学院营养学系副教授叶明津博士分享，健康饮食也是预防肝癌的重要环节。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 1:47 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc1002_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nsc1002.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nsc1002_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nsc1002_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nsc1002_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nsc1002_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nsc1002_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nsc1002_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nsc1002_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nsc1002_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nsc1002_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ffbns289/djy/blob/master/gb/nsc1002_3.md#1<br><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc1002_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ffbns289/djy/blob/master/gb/nsc1002_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc1002_3.htm">http://www.epochtimes.com/gb/nsc1002_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
