--- a/gb/nf3046_4.md
+++ b/gb/nf3046_4.md
@@ -11,6 +11,7 @@
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/9/1/n11492087.md#1" target="_blank">法兰克福中国节上 民众谴责中共迫害法轮功</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/9/1/n11492087.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/365285D4-C993-41B7-A03E-8C2727AA590F-150x120.jpeg" align ="left"></a>8月30日至9月1日，法轮功学员在法兰克福市内举行的“中国节”期间，举办了信息日活动，向民众揭露中共对法轮功的残酷迫害并征集反迫害签名，得到许多民众的支持，其中明白真相的华人声明退出中共组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月03日 7:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/8/30/n11487732.md#1" target="_blank">30多国法轮功学员聚伦敦 在著名景点洪法</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/8/30/n11487732.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/48642438366_5ccb244540_o1-150x120.jpg" align ="left"></a>“我曾经是一位太极拳教练，2012年我到了中国的武当山，因为我对气功非常好奇，中国一位中医大夫告诉我，在中国有一种气功是被禁止的。我当时听到这个消息非常吃惊，因此开始在网络上查询关于法轮大法的消息，当看到法轮大法的书时，我立刻就明白了：就是我要找的！我终于找到了法轮大法！”戈杰?查代（Gorger Cadez）说。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月30日 4:14 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/8/7/n11436959.md#1" target="_blank">一位中国老太在欧洲不平凡的20年（下）</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/8/7/n11436959.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/f04334acc2f7f6640bab6c1a76a7987b-150x120.jpg" align ="left"></a>瑞士伯尔尼法轮功学员潘淑珍在卢塞恩景点劝中国游客三退的故事。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月23日 12:36 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/9/30/n11556078.md#1" target="_blank">每日三退声明精选（2019/09/29）</a><br></h3>邪党过生日闹得鸡犬不宁，民营企业几天一检查，为了到达空气污染不太严重北京周围几百公里一周前就汽车限号出行，很多快递不许进京，往新疆的一切快递干脆停运，也许是发快递的公司怕惹麻烦以免被共产党处罚，虽然歌声不断街道插满红旗，我们从这紧张的空气中看到共产党的恐慌，真是做贼心虚，亡党在即。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月30日 11:54 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/9/29/n11553451.md#1" target="_blank">每日三退声明精选（2019/09/28）</a><br></h3>最近有机会到大陆以外的地方去看，看到了很多关于中共的历史真相，也看到了香港反送中的正义之举。早就看透中共，但是苦于自己不知道有这个途径，直到现在我才在这里退出党团队。生于乱世，有种责任。退出党团队，不与中共一起做恶，是在这个被中共搞乱的时代里我自己能够做的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月29日 10:10 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/9/25/n11544882.md#1" target="_blank">每日三退声明精选（2019/09/24）</a><br></h3>我在大学时由于成绩优异，被国内共党虚假消息洗脑，在学校和学院领导不断劝说下加入中共。后来来到美国，看到听到大量被中共隐藏和改编的事实真相，十分震惊和愤怒。于是在大约两年半前立即停交党费，与共产党邪恶组织脱离关系。由于担心共匪虚构事实，在此公开声明，我早已与中国共产党脱离关系，并且支持全世界正义联盟打倒共产党。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 11:38 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/9/24/n11542396.md#1" target="_blank">每日三退声明精选（2019/09/23）</a><br></h3>本人在大陆长大，自从学会翻墙和去过国外之后，看到了国外和大陆最大的不同就是没有共产独裁的社会其实才是最好的。我当初被中共这些人欺骗，现在一想起来就火大。包括马云等所谓的有钱人，就算是多有钱也保不住他们。有幸看到三退的机会，决定在这里退出中共的党团队，不想被中共牵连。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 11:13 AM							</td></tr>
@@ -36,9 +37,5 @@
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/8/28/n11482270.md#1" target="_blank">每日三退声明精选（2019/08/27）</a><br></h3>在国内不知怎么退，只有来这里退。这个组织只为上级服务，缺少法治，缺少人性，缺少人权，与世界文明相悖而驰。这样的组织还要强硬地控制十多亿人。不想同流合污。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月28日 11:20 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/8/25/n11475751.md#1" target="_blank">每日三退声明精选（2019/08/24）</a><br></h3>我们在媒体、军队多年工作，看透了中共邪恶、无耻、欺骗.....，让14亿人民受苦受难，民不聊生，真是罪大恶极！我们郑重宣布退出中共党、青年团、少先队邪恶组织！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月25日 11:07 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/8/23/n11471952.md#1" target="_blank">每日三退声明精选（2019/08/22）</a><br></h3>中国共产党罪大恶极，我在学校期间经人介绍，考核合格加入共产党后，发现官僚主义严重，体制极为腐败，与一个党派一个国家正应该追求的真理背道而驰，所以我申请退党。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月23日 11:27 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/8/21/n11466938.md#1" target="_blank">每日三退声明精选（2019/08/20）</a><br></h3>中共的历史不堪入目，从小我们都被灌输党的教育，被自愿的加入了共产阵营，活在谎言世界里，中共消灭中华文化，让这个国家里的人充满了狡诈，恶毒，邪恶，浮躁，冷漠，没人性，没良心，没责任感，没道德感。 
-毛泽东是不折不扣的卖国贼，叛国者。他带来的只有灾难与欺骗。他的共产党腐败，独裁，暴政都难以让人想像。 
-中国共产党所作所为都是在维稳，在反华，去中国化。 
-消.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月21日 10:08 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/nf3046_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nf3046.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nf3046_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nf3046_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nf3046_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nf3046_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nf3046_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nf3046_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nf3046_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nf3046_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/nf3046_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ffbns289/djy/blob/master/gb/nf3046_4.md#1<br><a href="https://github.com/ffbns289/djy/blob/master/gb/nf3046_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ffbns289/djy/blob/master/gb/nf3046_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nf3046_4.htm">http://www.epochtimes.com/gb/nf3046_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
